src/main/java/org/example/error/exception/LexicalException.java
package org.example.error.exception;

public class LexicalException extends Exception {

	public LexicalException(String errorMessage) {
		super(errorMessage);
	}

}
